# Advanced-Cpp-cource-HW1

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: CI.yml
include/: run.h  utils.h
linters/: run.sh
src/: main.c  run.c  utils.c
tests/: test.cpp
